versions/v2.12/modules/en/pages/security/compliance-scans/view-reports.adoc
= View Reports
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2025-08-26
:page-revdate: {revdate}
:page-community-path: how-to-guides/advanced-user-guides/compliance-scan-guides/view-reports.adoc 
:page-product-path: security/compliance-scans/view-reports.adoc
:experimental:

To view the generated Compliance scan reports,

. In the upper left corner, click *☰ > Cluster Management*.
. On the **Clusters** page, go to the cluster where you want to run a Compliance scan and click *Explore*.
. Click *Compliance > Scan*.
. The *Scans* page will show the generated reports. To see a detailed report, go to a scan report and click the name.

One can download the report from the Scans list or from the scan detail page.

To get the verbose version of the compliance scan results, run the following command on the cluster that was scanned. Note that the scan must be completed before this can be done.

[,shell]
----
export REPORT="scan-report-name"
kubectl get clusterscanreports.compliance.cattle.io $REPORT -o json |jq ".spec.reportJSON | fromjson" | jq -r ".actual_value_map_data" | base64 -d | gunzip | jq .
----